--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boltbucket",
+  "name": "diy-delight",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
